--- a/Ksiegarnia/appsettings.json
+++ b/Ksiegarnia/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "EmailAddress": "ksiegarnia.im@gmail.com",
+    "EmailPassword": "tkme gdux texk gyoz",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587
+  }
 }
